add token validation
